# razer

./: .Rbuildignore  .gitignore  404.html  AGENTS.md  CHANGELOG.html  CHANGELOG.md  CLAUDE.md  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  compartments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  writeup.md
R/: bincount.R  calc_capacity.R  carry_states.R  extendr-wrappers.R  laser_frame.R  model-composition.R  models.R  pyramid.R  run_model.R  squash.R  transitions.R  values_map.R
articles/: attack_fraction.html  attack_fraction.md  demographics.html  demographics.md  endemic_dynamics.html  endemic_dynamics.md  extending_razer.html  extending_razer.md  getting_started.html  getting_started.md  index.html  index.md  interventions.html  interventions.md  long_runs_and_memory.html  long_runs_and_memory.md  spatial_metapopulation.html  spatial_metapopulation.md  vital_dynamics_measles.html  vital_dynamics_measles.md
examples/: README.md  aged_population.R  compare_models.R  endemic_sir.R  endemic_sir_seasonal.R  engwal_measles.R  long_run_squash.R  quarantine.R  (+6 more)
src/rust/: Cargo.toml  document.rs
src/rust/src/: bincount.rs  births.rs  column.rs  distributions.rs  epidemic.rs  kmestimator.rs  laser_frame.rs  lib.rs  measles.rs  migration.rs  mortality.rs  pyramid.rs  rng.rs  sir.rs  steps.rs  transmission.rs  vitals.rs
worldwide/: CHANGELOG.md  README.md  USAGE.md  pyproject.toml  requirements.txt  writeup.md
worldwide/docs/: datasources.md  pipeline.md
worldwide/scripts/: 01_acquire_countries.py  01b_fix_failed.py  02_build_nodes.py  03_ingest_flights.py  04_assign_airports.py  05_intra_country_matrices.py  06_global_air_network.py  07_combine_network.py  08_plots.py  10_run_seir.py  11_covid_reference.py  12_animate_choropleth.py  13_animate_covid.py  14_animate_sim_cases.py  run_all.py
worldwide/src/wwsim/: __init__.py  acquire.py  air_network.py  airports_assign.py  choropleth_anim.py  config.py  countries.py  covid_reference.py  flights.py  gravity.py  logging.py  network.py  nodes.py  oag.py  plotting.py  rail.py  zonal.py
worldwide/src/wwsim/abm/: __init__.py  components.py  model.py  networks.py  plots.py  state.py
worldwide/tests/: conftest.py  test_abm.py  test_air_network.py  test_airports_assign.py  test_config.py  test_countries.py  test_flights.py  test_gravity.py  test_network.py  test_nodes.py  test_rail_oag.py
(+286 files in other folders)
