[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wwsim"]

[project]
name = "wwsim"
version = "0.1.0"
description = "Worldwide spatial data pipeline for LASER/Razer: admin-2 nodes, per-country gravity networks, and a global cross-border air-travel network."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyogrio>=0.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "networkx>=3.0",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "requests>=2.31",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "pycountry>=24.0",
    "laser-init@git+https://github.com/laser-base/laser-init",
]

# laser-init (and its dependency rastertoolkit) is installed separately, editable,
# from ./vendor/laser-init -- it is not on PyPI. See README.

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
    "network: marks tests that require network access (deselect with -m 'not network')",
    "needs_data: marks tests that require acquired country gpkgs to be present",
    "slow: marks slow tests (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
