[package]
name = 'razer'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'razer'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '*'
rayon = "1"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

[profile.release]
lto = true
codegen-units = 1
